@@ -1,3 +1,14 @@
+2011-02-11  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: command line's API inspect() is broken.
+        https://bugs.webkit.org/show_bug.cgi?id=54275
+
+        Test: inspector/command-line-api.html
+
+        * inspector/InjectedScriptSource.js:
+
 2011-02-11  Adam Barth  <abarth@webkit.org>
 
         Turns out window.crypto is supposed to be readonly.
